# autoqra

./: README.md  pyproject.toml  setup.py
autoqra/: __init__.py  __main__.py  autoqra_runner.py  cli.py
autoqra/amq/: __init__.py  optimizer.py
autoqra/core/: __init__.py  config.py  importance.py  memory.py
autoqra/evaluation/: __init__.py  proxy.py  real_task.py
autoqra/experiments/: ablation_importance.py  eval_tasks.py
autoqra/search/: __init__.py  neighbors.py  operators.py  phase2_evolution.py  phase3_bo.py
autoqra/surrogate/: __init__.py  mlp.py
autoqra/training/: __init__.py  lora.py  sft.py
autoqra/utils/: __init__.py  func.py
docs/: architecture.md
examples/: 01_proxy_search.py  02_load_real_sensitivity.py
scripts/: ablation_importance.sh  run_search.sh  run_search_real_task.sh
tests/: test_smoke.py
