[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoqra"
version = "1.0.0"
description = "AutoQRA: joint per-layer quantization and LoRA rank optimization."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "AutoQRA Authors"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/harrysyz99/autoqra"
Repository = "https://github.com/harrysyz99/autoqra"

[project.scripts]
autoqra = "autoqra.cli:main"
